<?xml version="1.0" encoding="UTF-8"?>

<!--
Copyright Contributors to the GenevaERS Project. SPDX-License-Identifier: Apache-2.0 (c) Copyright
IBM Corporation 2023

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<version>4.21.1</version>
	<groupId>org.genevaers</groupId>
	<artifactId>wb</artifactId>
	<packaging>pom</packaging>
	<name>GenevaERS Workbench</name>

	<properties>
		<tycho.version>4.0.12</tycho.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<modules>
		<module>prebuild</module>
		<module>ccb2lr</module>
		<module>plugins</module>
		<module>products</module>
		<module>releng</module>
		<module>postbuild</module>
	</modules>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.11.1</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-maven-plugin</artifactId>
			<version>4.13.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.19.2</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-yaml</artifactId>
			<version>2.20.0</version>
		</dependency>
	</dependencies>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-director-plugin</artifactId>
					<version>${tycho.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!--Enable
			the replacement of the SNAPSHOT version based on the last commit -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho.version}</version>
						<configuration>
							<!--<pomDependencies>wrapAsBundle</pomDependencies>  -->
							<target>
								<artifact>
									<groupId>org.genevaers</groupId>
									<artifactId>target-platform</artifactId>
									<version>4.21.1</version>
								</artifact>
							</target>
							<environments>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>macIntel</id>
			<activation>
				<os>
					<family>mac</family>
					<arch>x86_64</arch>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho.version}</version>
						<configuration>
							<!--<pomDependencies>wrapAsBundle</pomDependencies>  -->
							<target>
								<artifact>
									<groupId>org.genevaers</groupId>
									<artifactId>target-platform</artifactId>
									<version>4.21.1</version>
								</artifact>
							</target>
							<environments>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>macos-arm</id>
			<activation>
				<os>
					<family>mac</family>
					<arch>aarch64</arch>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho.version}</version>
						<configuration>
							<!--<pomDependencies>wrapAsBundle</pomDependencies>  -->
							<target>
								<artifact>
									<groupId>org.genevaers</groupId>
									<artifactId>target-platform</artifactId>
									<version>4.21.1</version>
								</artifact>
							</target>
							<environments>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>aarch64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>rat</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.rat</groupId>
						<artifactId>apache-rat-plugin</artifactId>
						<version>0.16.1</version>
						<executions>
							<execution>
								<phase>validate</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<licenses>
								<license implementation="org.apache.rat.analysis.license.ApacheSoftwareLicense20">
									<notes>Also allow the license url to be https.</notes>
									<patterns>
										<pattern>https://www.apache.org/licenses/LICENSE-2.0</pattern>
									</patterns>
								</license>
							</licenses>
							<addLicenseHeaders>true</addLicenseHeaders>
							<copyrightMessage>Copyright Contributors to the GenevaERS Project.
								SPDX-License-Identifier: Apache-2.0 (c) Copyright IBM Corporation
								2023</copyrightMessage>
							<consoleOutput>true</consoleOutput>
							<excludeSubProjects>false</excludeSubProjects>
							<ignoreErrors>true</ignoreErrors>
							<excludes>
								<exclude>README.md</exclude>
								<exclude>**/ratExcludes.txt</exclude>
								<exclude>**/.gitattributes</exclude>
								<exclude>**/*.yaml</exclude>
								<exclude>**/*.md</exclude>
								<exclude>**/*.properties</exclude>
								<exclude>**/MANIFEST.MF</exclude>
								<exclude>**/*.cpy</exclude>
								<exclude>**/*.CPY</exclude>
								<exclude>**/*polyglot*</exclude>
								<exclude>**/.classpath</exclude>
								<exclude>**/.project</exclude>
								<exclude>**/.settings/*</exclude>
								<exclude>**/*.ini</exclude>
								<exclude>**/target/*</exclude>
								<exclude>**/*.tycho</exclude>
								<exclude>**/*.target</exclude>
								<exclude>**/*.gv.svg</exclude>
							</excludes>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>